--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-vanilla-tilt": "^1.0.0",
     "reactstrap": "^9.1.5",
